--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </header>
   <main>
-    <section class="hero-section">
+    <!-- <section class="hero-section">
       <div class="container">
 
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -48,8 +48,8 @@
 
 
       </div>
-    </section>
-    <section class="section">
+    </section> -->
+    <!-- <section class="section">
       <div class="container">
         <h2 class="visually-hidden">Features</h2>
         <ul class="features-inner">
@@ -103,8 +103,8 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section class="our-team section">
+    </section> -->
+    <!-- <section class="our-team section">
       <div class="container">
         <h2 class="section-title">Our Team</h2>
         <ul class="our-team-card">
@@ -195,8 +195,8 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section class="section">
+    </section> -->
+    <!-- <section class="section">
       <div class="container">
         <h2 class="section-title">Our Portfolio</h2>
         <ul class="our-portfolio-card">
@@ -270,9 +270,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
   </main>
-  <footer class="footer">
+  <!-- <footer class="footer">
 
     <div class="footer-wrap container">
       <div class="footer-logo">
@@ -318,8 +318,8 @@
         </form>
       </div>
     </div>
-  </footer>
-  <div class="model-container">
+  </footer> -->
+  <!-- <div class="model-container">
     <div class="model-window">
       <button type="button" class="close-button">
         <svg class="close-icon" width="8" height="8">
@@ -374,7 +374,7 @@
         <button type="submit" class="model-submit-button">Submit</button>
       </form>
     </div>
-  </div>
+  </div> -->
 </body>
 
 
