--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </div>
     </section>
   </main>
-  <!-- <footer class="footer">
+  <footer class="footer">
 
     <div class="footer-wrap container">
       <div class="footer-logo">
@@ -318,8 +318,8 @@
         </form>
       </div>
     </div>
-  </footer> -->
-  <!-- <div class="model-container">
+  </footer>
+  <div class="model-container">
     <div class="model-window">
       <button type="button" class="close-button">
         <svg class="close-icon" width="8" height="8">
@@ -374,7 +374,7 @@
         <button type="submit" class="model-submit-button">Submit</button>
       </form>
     </div>
-  </div> -->
+  </div>
 </body>
 
 
