--- a/images/icon/icomoon/demo-external-svg.html
+++ b/images/icon/icomoon/demo-external-svg.html
@@ -17,6 +17,16 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-property"><use xlink:href="symbol-defs.svg#icon-property"></use></svg><span class="name"> icon-property</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-heroicons"><use xlink:href="symbol-defs.svg#icon-heroicons"></use></svg><span class="name"> icon-heroicons</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-close"><use xlink:href="symbol-defs.svg#icon-close"></use></svg><span class="name"> icon-close</span>
             </div>
         </div>
