--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <a class="nav-menu" href="">Contacts</a>
           </li>
         </ul>
+        <svg class="burger-menu" width="24" height="24">
+          <use href="./images/icons.svg#icon-heroicons"></use>
+        </svg>
       </nav>
       <address class="header-address">
         <ul class="header-address-list">
@@ -364,7 +367,7 @@
           <label for="user-privacy" class="checkbox-label">
             <span class="checkbox-icon">
               <svg class="checkbox-icon-svg" width="10" height="8">
-                <use href="./images/icons.svg#icon-checkbox"></use>
+                <use href="./images/icons.svg#icon-property"></use>
               </svg>
             </span>
             I accept the terms and conditions of the
