--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       </div>
     </div>
   </footer>
-  <!-- <div class="model-container">
+  <div class="model-container">
     <div class="model-window">
       <button type="button" class="close-button">
         <svg class="close-icon" width="8" height="8">
@@ -377,7 +377,7 @@
         <button type="submit" class="model-submit-button">Submit</button>
       </form>
     </div>
-  </div> -->
+  </div>
 </body>
 
 
