add mobile menu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </address>
     </div>
   </header>
-  <main>
+  <!-- <main>
     <section class="hero-section">
       <div class="container">
 
@@ -274,8 +274,8 @@
         </ul>
       </div>
     </section>
-  </main>
-  <footer class="footer">
+  </main> -->
+  <!-- <footer class="footer">
 
     <div class="footer-wrap container">
       <div class="footer-logo">
@@ -321,8 +321,8 @@
         </form>
       </div>
     </div>
-  </footer>
-  <div class="model-container">
+  </footer> -->
+  <!-- <div class="model-container">
     <div class="model-window">
       <button type="button" class="close-button">
         <svg class="close-icon" width="8" height="8">
@@ -377,7 +377,53 @@
         <button type="submit" class="model-submit-button">Submit</button>
       </form>
     </div>
+  </div> -->
+  <div class="mobile-menu-container">
+    <div class="mobile-menu">
+      <nav class="header-nav ">
+
+        <ul class="nav-list ">
+          <li>
+            <a class="nav-menu nav-menu-studio" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="nav-menu" href="">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-menu" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="header-address">
+        <ul class="header-address-list">
+          <Li><a class="header-address-link mobile-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></Li>
+          <Li><a class="header-address-link mobile-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </Li>
+        </ul>
+      </address>
+      <div class="mobile-menu-social">
+        <ul class="social_card">
+          <li class="social_list "><a class="social_link social-link-footer" href="#"><svg class="social_icon"
+                width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg></a></li>
+          <li class="social_list "><a class="social_link social-link-footer" href="#"><svg class="social_icon"
+                width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg></a></li>
+          <li class="social_list "><a class="social_link social-link-footer" href="#"><svg class="social_icon"
+                width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg></a></li>
+          <li class="social_list "><a class="social_link social-link-footer" href="#"><svg class="social_icon"
+                width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg></a></li>
+        </ul>
+      </div>
+    </div>
   </div>
+
 </body>
 
 
