--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </address>
     </div>
   </header>
-  <!-- <main>
+  <main>
     <section class="hero-section">
       <div class="container">
 
@@ -274,8 +274,8 @@
         </ul>
       </div>
     </section>
-  </main> -->
-  <!-- <footer class="footer">
+  </main>
+  <footer class="footer">
 
     <div class="footer-wrap container">
       <div class="footer-logo">
@@ -321,8 +321,8 @@
         </form>
       </div>
     </div>
-  </footer> -->
-  <!-- <div class="model-container">
+  </footer>
+  <div class="model-container">
     <div class="model-window">
       <button type="button" class="close-button">
         <svg class="close-icon" width="8" height="8">
@@ -377,7 +377,7 @@
         <button type="submit" class="model-submit-button">Submit</button>
       </form>
     </div>
-  </div> -->
+  </div>
   <div class="mobile-menu-container">
     <div class="mobile-menu">
       <nav class="header-nav ">
