--- a/index.html
+++ b/index.html
@@ -380,6 +380,11 @@
   </div>
   <div class="mobile-menu-container">
     <div class="mobile-menu">
+      <button type="button" class="close-button">
+        <svg class="close-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
       <nav class="header-nav ">
         <ul class="nav-list ">
           <li>
